Fixing overflow

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /*⛔⛔ End genral reset ⛔⛔*/
 
 /* 
